@@ -1,3 +1,7 @@
+2007-08-01  Tor Lillqvist  <tml@novell.com>
+
+	* glibconfig.h.win32.in: Update to match what configure produces.
+
 2007-07-31  Matthias Clasen  <mclasen@redhat.com>
 
 	* glib/pcre/*: Update the internal PCRE to 7.2
